--- a/home.html
+++ b/home.html
@@ -396,6 +396,106 @@
         </div>
         <button class="move-btn move-btn-right" onclick="moveCategories('right')">&gt;</button>
     </section>
+    <section id="Home-page-section-4">
+        <div class="sec-4-detail">
+            <div class="sec-4-detail-part1">
+                <div>
+                    <i class="fa-solid fa-cubes-stacked"></i>
+                </div>
+                <div>
+                    <h2>ONE STOP SHOP</h2>
+                    <p>With 50+ Developers under 1 roof, we have everything you could ask for</p>
+                </div>
+            </div>
+            <div class="sec-4-detail-part2">
+                <div>
+                    <i class="fa-solid fa-users-line"></i>
+                </div>
+                <div>
+                    <h2>FINANCIAL SUPPORT</h2>
+                    <p><p>When it comes to managing your finances or offering authentic financial expertise, you can rely on our reliable team</p></p>
+                </div>
+            </div>
+            <div class="sec-4-detail-part3">
+                <div>
+                    <i class="fa-solid fa-hand-holding-hand"></i>
+                </div>
+                <div>
+                    <h2>POST PURCHASE SUPPORT</h2>
+                    <p><p>Our reviews consistently receive 5 stars due to our reliable post-purchase assistance</p></p>
+                </div>
+            </div>
+        </div>
+        <div class="video">
+            <div class="FEATURED-bio">
+                <h3>FEATURED BY GARY VEE</h3>
+                <p>The REVO Family experienced an immensely joyous occasion as our unique marketing approach caught the attention of the renowned influencer, GARY VEE. It marked a truly blissful moment for all of us.</p>
+                <a href="about-us.html"><button class="section-4-btn-1">About US</button></a>
+            </div>
+            <div>
+                <video controls autoplay>
+                    <source src="./images/video-1.mp4" type="video/mp4">
+                </video>
+            </div>
+        </div>
+    </section>
+    <section id="Home-page-section-6">
+        <div class="content">
+            <div class="text-container">
+                <h1>WE’RE HIRING</h1>
+                <p>We welcome those with a passion for Dubai real estate to start their journey with us.</p>
+            </div>
+            <div class="button-container">
+                <a href="contact.html"><button>Contact Now</button></a>
+            </div>
+        </div>
+    </section>
+    <section id="Home-page-section-5">
+        <div>
+            <video controls autoplay>
+                <source src="./images/video-2.mp4" type="video/mp4">
+            </video>
+        </div>
+    </section>
+    <section id="Home-page-section-7">
+        <div class="bio">
+            <h3>GALLERY</h3>
+            <i class="fab fa-squarespace"></i>
+            <p>Here are some photos showcasing our accomplishments, outdoor pursuits, and charitable endeavors.</p>
+        </div>
+        <div class="image-gallery">
+            <img src="./images/pic1.webp" alt="Pic 1">
+            <img src="./images/pic3.webp" alt="Pic 3">
+            <img src="./images/pic4.webp" alt="Pic 4">
+            <img src="./images/pic5.webp" alt="Pic 5">
+            <img src="./images/pic6.webp" alt="Pic 6">
+        </div>
+        <div>
+            <button class="sec-7-btn-1">View All</button>
+        </div>
+    </section>
+    <section id="Home-page-section-8">
+        <div>
+            <h2>OUR PARTNERS</h2>
+        </div>
+        <div>
+            <div>
+                <img src="./images/partner-1.png" alt="">
+                <img src="./images/partner-2.png" alt="">
+                <img src="./images/partner-3.png" alt="">
+                <img src="./images/partner-4.png" alt="">
+                <img src="./images/partner-5.png" alt="">
+                <img src="./images/partner-6.png" alt="">
+                <img src="./images/partner-7.png" alt="">
+                <img src="./images/partner-8.png" alt="">
+                <img src="./images/partner-9.png" alt="">
+                <img src="./images/partner-10.png" alt="">
+                <img src="./images/partner-1.png" alt="">
+                <img src="./images/partner-2.png" alt="">
+                <img src="./images/partner-3.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
