--- a/index.html
+++ b/index.html
@@ -401,34 +401,23 @@
     </section>
     <section id="Home-page-section-8">
         <div>
-            <h2></h2>
+            <h2>OUR PARTNERS</h2>
         </div>
         <div>
             <div>
-                <div><i></i></div>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <div><i></i></div>
-            </div>
-            <div>
-                <i></i>
-                <i></i>
-                <i></i>
-                <i></i>
-                <i></i>
-                <i></i>
-                <i></i>
+                <img src="./images/partner-1.png" alt="">
+                <img src="./images/partner-2.png" alt="">
+                <img src="./images/partner-3.png" alt="">
+                <img src="./images/partner-4.png" alt="">
+                <img src="./images/partner-5.png" alt="">
+                <img src="./images/partner-6.png" alt="">
+                <img src="./images/partner-7.png" alt="">
+                <img src="./images/partner-8.png" alt="">
+                <img src="./images/partner-9.png" alt="">
+                <img src="./images/partner-10.png" alt="">
+                <img src="./images/partner-1.png" alt="">
+                <img src="./images/partner-2.png" alt="">
+                <img src="./images/partner-3.png" alt="">
             </div>
         </div>
     </section>
